--- a/frontend/src/components/Movie/MoviesList/moviesList.css
+++ b/frontend/src/components/Movie/MoviesList/moviesList.css
@@ -15,6 +15,7 @@
 }
 .movies-list {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns:  repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 20px;
+    min-height: 400px;
 }
