--- a/frontend/src/components/Movie/MovieCard/movieCard.css
+++ b/frontend/src/components/Movie/MovieCard/movieCard.css
@@ -6,6 +6,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 10px;
   position: relative;
+  max-width: 400px;
 }
 .movie-card-actions {
   display: flex;
@@ -87,6 +88,8 @@
   border-radius: 5px;
   border: none;
   cursor: pointer;
+  text-align: center;
+  text-decoration: none;
 }
 .movie-card-button:hover {
   background-color: #c52808;
