--- a/frontend/src/components/Movie/MovieCard/movieCard.css
+++ b/frontend/src/components/Movie/MovieCard/movieCard.css
@@ -56,7 +56,7 @@
   font-size: 10px;
   line-height: 1.2;
   padding: 3px 6px;
-  margin-right: 5px;
+  margin: 5px;
   color: #fff;
   background: #e83e08;
   border-radius: 10px;
