--- a/frontend/src/components/Movie/MovieBooking/movieBooking.css
+++ b/frontend/src/components/Movie/MovieBooking/movieBooking.css
@@ -47,25 +47,25 @@
   cursor: pointer;
 }
 .selected-seat {
-  background-color: #ff9d00;
+  background-color: var(--secondary-color);
 }
 .booked-seat {
     pointer-events: none;
-    background-color: #ff5733 !important;
+    background-color: var(--error-color) !important;
 }
 .my-seat {
     pointer-events: none;
-    background-color: #31ae12 !important;
+    background-color: var(--accent-color) !important;
 }
 .movie-show-seat:hover {
-  background-color: #f18300;
+  background-color: var(--secondary-color);
 }
 .movie-show-seat span {
   font-size: 14px;
   line-height: 1.2;
-  color: #444;
+  color: var(--text-color);
   font-weight: 700;
-  background-color: #fff;
+  background-color: var(--background-color);
   width: 100%;
   text-align: center;
 }
@@ -77,12 +77,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px; 
-    background-color: #f8f9fa;
-    border: 1px solid #dee2e6;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    background-color: var(--background-color);
+    box-shadow: 0 2px 5px var(--border-color);
     font-size: 18px;
-    color: #343a40;
+    color: var(--text-color);
     gap: 10px;
     grid-column: 1 / -1;
 }
@@ -103,27 +101,27 @@
   padding: 10px;
   font-size: 16px;
   font-weight: 600;
-  background-color: #fff;
-  color: #444;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 .movie-show-total-price {
   padding: 10px;
   font-size: 16px;
   font-weight: 600;
-  background-color: #fff;
-  color: #444;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 .movie-show-checkout-button {
   font-size: 18px;
   font-weight: 600;
   padding: 10px;
   border: none;
-  color: #fff;
-  background-color: #f18300;
-  box-shadow: 0 0 10px #aaa;
+  color: var(--text-in-bg-color);
+  background-color: var(--accent-color);
+  box-shadow: 0 0 10px var(--border-color);
 }
 .movie-show-checkout-button:hover {
-  background-color: #ff9d00;
+  background-color: var(--secondary-color);
 }
 .movie-show-unselected {
   display: flex;
@@ -133,4 +131,37 @@
   height: 100%;
   font-size: 24px;
   font-weight: 600;
+}
+
+@media (max-width: 800px) {
+    .movie-booking-container {
+        grid-template-columns: 1fr;
+    }
+    .movie-show-info {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .movie-booking-preview {
+        order: 2;
+    }
+    .movie-show-checkout {
+        grid-column: 1 / -1;
+    }
+    .movie-show-seat-container {
+        grid-column: 1 / -1;
+    }
+}
+
+@media (max-width: 600px) {
+    .movie-show-seat-container {
+        gap: 10px;
+        padding: 10px;
+        width: 100%;
+    }
+    .movie-show-seat {
+        width: 100%;
+        height: 100%;
+        max-width: 50px;
+        margin: auto;
+    }
 }
