--- a/frontend/src/components/Movie/MovieRecomendations/movieRecomendations.css
+++ b/frontend/src/components/Movie/MovieRecomendations/movieRecomendations.css
@@ -88,3 +88,9 @@
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+@media (max-width: 800px) {
+    .recomendations-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
