--- a/frontend/src/components/Movie/MoviesList/moviesList.css
+++ b/frontend/src/components/Movie/MoviesList/moviesList.css
@@ -1,6 +1,6 @@
 .add-movie-button {
-    background-color: #007bff;
-    color: #fff;
+    background-color: var(--accent-color);
+    color: var(--text-in-bg-color);
     font-size: 16px;
     line-height: 1.2;
     font-weight: 600;
@@ -11,7 +11,7 @@
     text-decoration: none;
 }
 .add-movie-button:hover {
-    background-color: #0069d9;
+    background-color: var(--primary-color);
 }
 .movies-list {
     display: grid;
