--- a/frontend/src/components/Movie/UpcomingBookings/upcomingBookings.css
+++ b/frontend/src/components/Movie/UpcomingBookings/upcomingBookings.css
@@ -88,3 +88,14 @@
     border-radius: 15px;
     font-size: 12px;
 }
+
+@media (max-width: 800px) {
+    .upcoming-bookings-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (max-width: 800px) {
+    .upcoming-bookings-wrapper {
+        grid-template-columns: 1fr;
+    }
+}
