--- a/frontend/src/components/Movie/MovieBooking/movieBooking.css
+++ b/frontend/src/components/Movie/MovieBooking/movieBooking.css
@@ -47,7 +47,7 @@
   cursor: pointer;
 }
 .selected-seat {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color) !important;
 }
 .booked-seat {
     pointer-events: none;
@@ -55,7 +55,7 @@
 }
 .my-seat {
     pointer-events: none;
-    background-color: var(--accent-color) !important;
+    background-color: var(--success-color) !important;
 }
 .movie-show-seat:hover {
   background-color: var(--secondary-color);
