--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
 :root {
+  --header-bg-color: #333333;
   --primary-color: #FF6500;
   --secondary-color: #FFB200;
   --accent-color: #B43F3F;
@@ -9,6 +10,7 @@
   --background-color: #f5f5f5;
   --border-color: #cccccc;
   --error-color: #dc3545;
+  --success-color: #72BF78;
 }
 
 * {
@@ -90,4 +92,11 @@ code {
   font-size: 16px;
   font-weight: 500;
   margin-top: 20px;
+}
+.login-link,
+.register-link {
+    margin: 10px auto;
+    width: fit-content;
+    font-size: 14px;
+    color: var(--muted-text-color);
 }
