fixed warnings and errors

--- a/frontend/src/components/Movie/MovieSlotAdd/movieSlotAdd.css
+++ b/frontend/src/components/Movie/MovieSlotAdd/movieSlotAdd.css
@@ -51,3 +51,10 @@
   color: #fff;
   cursor: pointer;
 }
+
+@media (max-width: 600px) {
+  .add-slot-form {
+    flex-direction: column;
+    gap: 5px;
+  }
+}
